--- a/iOS/LaBuilderApp.iOS.csproj
+++ b/iOS/LaBuilderApp.iOS.csproj
@@ -103,6 +103,24 @@
     <Reference Include="Xamarin.Forms.Xaml">
       <HintPath>..\packages\Xamarin.Forms.2.3.3.180\lib\Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
     </Reference>
+    <Reference Include="Plugin.AppInfo.Abstractions">
+      <HintPath>..\packages\Xam.Plugin.AppInfo.1.0.8\lib\Xamarin.iOS10\Plugin.AppInfo.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Plugin.AppInfo">
+      <HintPath>..\packages\Xam.Plugin.AppInfo.1.0.8\lib\Xamarin.iOS10\Plugin.AppInfo.dll</HintPath>
+    </Reference>
+    <Reference Include="Plugin.Media.Abstractions">
+      <HintPath>..\packages\Xam.Plugin.Media.2.6.2\lib\Xamarin.iOS10\Plugin.Media.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Plugin.Media">
+      <HintPath>..\packages\Xam.Plugin.Media.2.6.2\lib\Xamarin.iOS10\Plugin.Media.dll</HintPath>
+    </Reference>
+    <Reference Include="Plugin.DeviceInfo.Abstractions">
+      <HintPath>..\packages\Xam.Plugin.DeviceInfo.2.1.2\lib\Xamarin.iOS10\Plugin.DeviceInfo.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Plugin.DeviceInfo">
+      <HintPath>..\packages\Xam.Plugin.DeviceInfo.2.1.2\lib\Xamarin.iOS10\Plugin.DeviceInfo.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LaBuilderApp\LaBuilderApp.csproj">
