--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Xam.Plugin.AppInfo" version="1.0.8" targetFramework="xamarinios10" />
+  <package id="Xam.Plugin.DeviceInfo" version="2.1.2" targetFramework="xamarinios10" />
+  <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.3.180" targetFramework="xamarinios10" />
 </packages>
