--- a/Droid/LaBuilderApp.Droid.csproj
+++ b/Droid/LaBuilderApp.Droid.csproj
@@ -132,6 +132,9 @@
     <Compile Include="MainApplication.cs" />
     <Compile Include="Code\Files.cs" />
     <Compile Include="Helpers\Settings.cs" />
+    <Compile Include="AurekBeshRenderer.cs" />
+    <Compile Include="StarJediRenderer.cs" />
+    <Compile Include="TieWingRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -152,6 +155,11 @@
   <ItemGroup>
     <Folder Include="Resources\xml\" />
     <Folder Include="Code\" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\Aurek-Besh.ttf" />
+    <AndroidAsset Include="Assets\Star Jedi.ttf" />
+    <AndroidAsset Include="Assets\TIE-Wing.ttf" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets')" />
