--- a/iOS/LaBuilderApp.iOS.csproj
+++ b/iOS/LaBuilderApp.iOS.csproj
@@ -159,6 +159,11 @@
     <Compile Include="Code\Files.cs" />
     <Compile Include="Helpers\Settings.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\Aurek-Besh.ttf" />
+    <BundleResource Include="Resources\Star Jedi.ttf" />
+    <BundleResource Include="Resources\TIE-Wing.ttf" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.3.193\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.3.193\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
 </Project>
