--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDisplayName</key>
-	<string>LaBuilderApp</string>
+	<string>La Builder App</string>
 	<key>CFBundleName</key>
-	<string>LaBuilderApp</string>
+	<string>La Builder App</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.boris.labuilderapp</string>
 	<key>CFBundleShortVersionString</key>
@@ -46,10 +46,6 @@
 	<string>This app needs access to the camera to take photos.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app needs access to photos.</string>
-	<key>UIStatusBarHidden</key>
-	<true/>
-	<key>UIRequiresFullScreen</key>
-	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSExceptionDomains</key>
@@ -68,6 +64,8 @@
 			<key>NSAllowsArbitraryLoads</key>
 			<true/>
 		</dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 	</dict>
 	<key>UIAppFonts</key>
 	<array>
@@ -81,5 +79,11 @@
 	<string>Afin de découvrir les Builders et leurs robots !</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Afin de découvrir les Builders et leurs robots !</string>
+	<key>XSLaunchImageAssets</key>
+	<string>Assets.xcassets/LaunchImage-1.launchimage</string>
+	<key>UIStatusBarHidden</key>
+	<true/>
+	<key>UIRequiresFullScreen</key>
+	<true/>
 </dict>
 </plist>
