--- a/LaBuilderApp/LaBuilderApp.csproj
+++ b/LaBuilderApp/LaBuilderApp.csproj
@@ -72,6 +72,11 @@
     <EmbeddedResource Include="Views\PageBuilder.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\ViewConnect.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Images\menu_planner.png" />
+    <EmbeddedResource Include="Images\menu_login.png" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
@@ -129,6 +134,9 @@
     <Compile Include="Code\AwesomeWrappanel.cs" />
     <Compile Include="Views\PageBuilder.xaml.cs">
       <DependentUpon>PageBuilder.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ViewConnect.xaml.cs">
+      <DependentUpon>ViewConnect.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
