--- a/LaBuilderApp/LaBuilderApp.csproj
+++ b/LaBuilderApp/LaBuilderApp.csproj
@@ -77,6 +77,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Images\menu_planner.png" />
     <EmbeddedResource Include="Images\menu_login.png" />
+    <EmbeddedResource Include="Images\menu_media.png" />
+    <EmbeddedResource Include="Views\ViewMedia.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
@@ -139,6 +143,9 @@
       <DependentUpon>ViewConnect.xaml</DependentUpon>
     </Compile>
     <Compile Include="Code\Login.cs" />
+    <Compile Include="Views\ViewMedia.xaml.cs">
+      <DependentUpon>ViewMedia.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="project.json" />
