--- a/ConstructImage/ConstructImage.csproj
+++ b/ConstructImage/ConstructImage.csproj
@@ -8,6 +8,7 @@
     <RootNamespace>ConstructImage</RootNamespace>
     <AssemblyName>ConstructImage</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <ReleaseVersion>0.2</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
