--- a/LaBuilderApp/LaBuilderApp.csproj
+++ b/LaBuilderApp/LaBuilderApp.csproj
@@ -174,6 +174,7 @@
     </Compile>
     <Compile Include="Model\ThingsType.cs" />
     <Compile Include="Model\Country.cs" />
+    <Compile Include="Component\CarouselIndicators.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="project.json" />
