--- a/LaBuilderApp/project.json
+++ b/LaBuilderApp/project.json
@@ -5,7 +5,8 @@
     "Xam.Plugin.DeviceInfo": "2.1.2",
     "Xam.Plugin.Media": "2.6.2",
     "Xam.Plugins.Settings": "2.5.4",
-    "Xamarin.Forms": "2.3.3.193"
+    "Xamarin.Forms": "2.3.3.193",
+    "Xamarin.Forms.CarouselView": "2.3.0-pre2"
   },
   "frameworks": {
     ".NETPortable,Version=v4.5,Profile=Profile111": {}
