--- a/LaBuilderApp/LaBuilderApp.csproj
+++ b/LaBuilderApp/LaBuilderApp.csproj
@@ -130,6 +130,20 @@
     <EmbeddedResource Include="Images\r6t6-2-125.png" />
     <EmbeddedResource Include="Images\r7s1-2-125.png" />
     <EmbeddedResource Include="Images\r9-1-125.png" />
+    <EmbeddedResource Include="Images\r2a6-1-125.png" />
+    <EmbeddedResource Include="Images\r2b1-1-125.png" />
+    <EmbeddedResource Include="Images\r2d2-1-125.png" />
+    <EmbeddedResource Include="Images\r2r9-1-125.png" />
+    <EmbeddedResource Include="Images\r2v2-1-125.png" />
+    <EmbeddedResource Include="Images\r3d2-1-125.png" />
+    <EmbeddedResource Include="Images\r3t7-1-125.png" />
+    <EmbeddedResource Include="Images\r4g9-1-125.png" />
+    <EmbeddedResource Include="Images\r4i9-1-125.png" />
+    <EmbeddedResource Include="Images\r4m9-1-125.png" />
+    <EmbeddedResource Include="Images\r5a7-1-125.png" />
+    <EmbeddedResource Include="Images\r5d4-1-125.png" />
+    <EmbeddedResource Include="Images\r6t6-1-125.png" />
+    <EmbeddedResource Include="Images\r7s1-1-125.png" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
