--- a/Droid/LaBuilderApp.Droid.csproj
+++ b/Droid/LaBuilderApp.Droid.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Helpers\Settings.cs" />
     <Compile Include="splashscreen.cs" />
     <Compile Include="Code\ScreenSize.cs" />
+    <Compile Include="Code\CustomListViewRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
