--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -4,7 +4,7 @@
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="La Builder App" android:icon="@drawable/icon" android:largeHeap="true">
+	<application android:label="DroidBuilders.Fr" android:icon="@drawable/icon" android:largeHeap="true">
 		<provider android:name="android.support.v4.content.FileProvider" android:authorities="com.boris.labuilderapp.fileprovider" android:exported="false" android:grantUriPermissions="true">
 			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
 		</provider>
