--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -2,10 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDisplayName</key>
-	<string>La Builder App</string>
-	<key>CFBundleName</key>
-	<string>La Builder App</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.boris.labuilderapp</string>
 	<key>CFBundleShortVersionString</key>
@@ -85,5 +81,9 @@
 	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>CFBundleName</key>
+	<string>LaBuilderApp</string>
+	<key>CFBundleDisplayName</key>
+	<string>Droid Builder .Fr</string>
 </dict>
 </plist>
