--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -15,6 +15,7 @@
   <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid71" />
+  <package id="Xamarin.Estimote.Android" version="0.11.0.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms" version="2.3.3.193" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms.CarouselView" version="2.3.0-pre2" targetFramework="monoandroid71" />
 </packages>
