variabilisation du rendu du radar chgt nom de l'app ios

--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -84,6 +84,6 @@
 	<key>CFBundleName</key>
 	<string>LaBuilderApp</string>
 	<key>CFBundleDisplayName</key>
-	<string>LaBuilderApp</string>
+	<string>Droid Builder .Fr</string>
 </dict>
 </plist>
